--- a/README
+++ b/README
@@ -1,1 +1,6 @@
-하이브레인넷 부설연구소 GIT 세미나
+2012년 1월 20일 GIT 세미나
+
+주체 : 하이브레인넷 부설연구소
+대상 : 하이브레인넷 부설연구소, 데이터베이스 연구실  
+
+git diff를 이용해서 저장공간의 차이점을 비교할 수 있다. 이때 git diff는 작업트리와 스태이징 사이의 차이점을 비교하고, git diff --cahced는 스태이징 영역과 저장소 사이의 차이점을 비교한다. 마지막으로 HEAD는 작업트리, 스태이징, 저장소의 변경사항을 모두 보여준다. 
